[gd_scene load_steps=5 format=3 uid="uid://dgn6nhkmw67td"]

[ext_resource type="PackedScene" uid="uid://c1g50h2avck3w" path="res://addons/maaacks_credits_scene/examples/scenes/credits/credits.tscn" id="1_885d8"]
[ext_resource type="Script" path="res://addons/maaacks_credits_scene/examples/scenes/end_credits/end_credits.gd" id="2_6pwj4"]
[ext_resource type="Script" path="res://addons/maaacks_credits_scene/base/scripts/capture_focus.gd" id="3_aoilo"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_credits_scene/base/scenes/music_players/background_music_player.tscn" id="3_v7acr"]

[node name="EndCredits" instance=ExtResource("1_885d8")]
script = ExtResource("2_6pwj4")
main_menu_scene = ""

[node name="BackgroundMusicPlayer" parent="." index="0" instance=ExtResource("3_v7acr")]
bus = &"Master"

[node name="BackgroundColor" type="ColorRect" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BackgroundTextureRect" type="TextureRect" parent="." index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ScrollContainer" parent="." index="3"]
scroll_vertical = 0

[node name="HeaderSpace" parent="ScrollContainer/VBoxContainer" index="0"]
custom_minimum_size = Vector2(0, 648)

[node name="CreditsLabel" parent="ScrollContainer/VBoxContainer" index="1"]
texture_filter = 1
custom_minimum_size = Vector2(1152, 0)
text = "[center][font_size=48]Parallax[/font_size]




[font_size=32]Developed By[/font_size]
David Sep√∫lveda  
Jaden Ogunleye  


[font_size=32]Artwork By[/font_size]
Sophia Lorin Tumulak  





























[font_size=32]Made With Passion by Students[/font_size]
[/center]"

[node name="FooterSpace" parent="ScrollContainer/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 648)

[node name="CenterContainer" type="CenterContainer" parent="." index="4"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="EndMessagePanel" type="Panel" parent="CenterContainer" index="0"]
unique_name_in_owner = true
visible = false
texture_filter = 1
custom_minimum_size = Vector2(360, 120)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/EndMessagePanel" index="0"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ThankPlayer" type="Label" parent="CenterContainer/EndMessagePanel/VBoxContainer" index="0"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Thanks for playing."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/EndMessagePanel/VBoxContainer" index="1"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer" index="0"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
script = ExtResource("3_aoilo")

[node name="MenuButton" type="Button" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
